--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,14 @@
     <string name="pref_sort_order_key">sortOrder</string>
     <string name="pref_most_popular">Most Popular</string>
     <string name="pref_highest_rated">Highest Rated</string>
+
+    <string name="popular">Popular</string>
+    <string name="top_rated">Top Rated</string>
+
+    <string name="movies_title">Movies</string>
+    <string name="people_title">People</string>
+    <string name="settings_title">Settings</string>
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
